# beyond-vector-search

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: corpus.jsonl  labels.jsonl
diagrams/: README.md  architecture.html  architecture_v2.html  architecture_v3.html
docs/: README.md  faq.md  linkedin_posts.md  medium_post.html  medium_post.md  medium_seo_checklist.md  one_slide_summary.md  talk_abstract.md
notebooks/: README.md  databricks_demo.ipynb  databricks_demo.py  databricks_lakebase_demo.py  demo.py
src/beyond_vector_search/: __init__.py  answer.py  data.py  evaluate.py  evaluator.py  index.py  retrievers.py  router.py  run.py  telemetry.py  text.py  types.py
tests/: __init__.py  test_router_and_eval.py
